feat: support `PUID` `PGID` `UMASK` env